Raised border on header to avoid clipping

--- a/css/api.css
+++ b/css/api.css
@@ -338,6 +338,7 @@ custom-txt
     border-top-width: 0px;
     border-left-width: 0px;
     border-right-width: 0px;
+    z-index: 10;
 }
 
 ul
